--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "de.leonardarnold.numberpickerpreference.sample"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 1gr
+        versionCode 1g
         versionName "1.0"
     }
     buildTypes {
